# mcplogger

./: .env  .env.example  .gitignore  EXAMPLES.md  HOW_TO_RUN.md  INSTALLATION.md  QUICK_START.md  README.md  SERVICE.md  __init__.py  analyzer.py  ask.py  cli.py  client.py  config.py  conftest.py  constants.py  embedder.py  file_reader.py  log_generator.py  main.py  patterns.py  pyproject.toml  requirements.txt  searcher.py  smart_ask.py  summarizer.py  test_analyzer.py  tools.py
config/: __init__.py  config.py  constants.py
core/: analyzer.py  patterns.py
llm/: summarizer.py
search/: clusterer.py  embedder.py  searcher.py  time_filter.py
server/: http_client.py  service.py  tools.py
tests/: test_analyzer.py  test_http_service.py
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html
