[project]
name = "mcplogger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.0",
    "flask>=3.0",
    "huggingface-hub>=1.11.0",
    "mcp>=1.26.0",
    "python-dotenv>=1.0",
    "requests>=2.32.5",
    "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
